<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.PreferenceCategory
        android:title="@string/notification_settings"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="notification_permission"
            android:title="@string/notification_permission"
            android:summary="@string/notification_permission_summary"
            app:iconSpaceReserved="false" />

        <androidx.preference.Preference
            android:key="alarm_permission"
            android:title="@string/alarm_permission"
            android:summary="@string/alarm_permission_summary"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="notification_sound"
            android:title="@string/notification_sound"
            android:summary="@string/notification_sound_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="notification_vibration"
            android:title="@string/notification_vibration"
            android:summary="@string/notification_vibration_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

        <androidx.preference.SwitchPreferenceCompat
            android:key="advance_notification"
            android:title="@string/advance_notification"
            android:summary="@string/advance_notification_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>



    <androidx.preference.PreferenceCategory
        android:title="@string/data_synchronization"
        app:iconSpaceReserved="false">

        <androidx.preference.SwitchPreferenceCompat
            android:key="auto_sync"
            android:title="@string/auto_sync"
            android:summary="@string/auto_sync_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

    <androidx.preference.PreferenceCategory
        android:title="@string/about"
        app:iconSpaceReserved="false">

        <androidx.preference.Preference
            android:key="app_version"
            android:title="@string/app_version"
            android:summary="1.0.0"
            app:iconSpaceReserved="false" />

    </androidx.preference.PreferenceCategory>

</androidx.preference.PreferenceScreen>