<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_classes"
            android:icon="@drawable/ic_class"
            android:title="@string/menu_classes" />
        <item
            android:id="@+id/nav_meetings"
            android:icon="@drawable/ic_meeting"
            android:title="@string/menu_meetings" />
    </group>

    <item android:title="@string/menu_account">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>