<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="add_class"
        android:enabled="true"
        android:icon="@drawable/ic_class_24"
        android:shortcutShortLabel="@string/add_class"
        android:shortcutLongLabel="@string/add_new_class">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.teacherscheduler"
            android:targetClass="com.example.teacherscheduler.ui.ModernAddEditClassActivity" />
    </shortcut>
    
    <shortcut
        android:shortcutId="add_meeting"
        android:enabled="true"
        android:icon="@drawable/ic_meeting"
        android:shortcutShortLabel="@string/add_meeting"
        android:shortcutLongLabel="@string/add_new_meeting">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.example.teacherscheduler"
            android:targetClass="com.example.teacherscheduler.ui.ModernAddEditMeetingActivity" />
    </shortcut>
</shortcuts>
